# APP_DEV_FLUTTER_APP

./: .pylintrc  BACKEND_UPDATE_INSTRUCTIONS.md  CORS_FIX_EXPLANATION.md  DEPLOYMENT.md  ESP32_Email_Auth.ino  ESP32_Motion_Temperature_WebSocket.ino  ESP32_Production_Email_Auth.ino  ESP32_Production_Template.ino  ESP32_README.md  NETLIFY_DEPLOYMENT_FIXES.md  NETLIFY_DEPLOYMENT_FIXES_PART2.md  README.md  cors_network_solution_guide.md  django_cors_settings.py  esp32_websocket_with_token.ino  netlify.toml  package-lock.json  pubspec.yaml  pyproject.toml  pyrightconfig.json  render.yaml  render_csrf_update_instructions.md  run_backend.bat  setup_backend.bat  test_password_reset_request.py
android/app/: build.gradle.kts
backend/: .env  .pylintrc  Procfile  README.md  add_email_verified_field.py  build.sh  db.sqlite3  fix_dependencies.bat  fix_email_verification.py  init_db.bat  install_pillow.bat  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  reset_environment.bat  run_server.bat  setup_django.bat  test_email.py  test_email_verification.py  test_password_reset.py
backend/motion_detector_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/motion_detector_backend/sensors/: admin.py  apps.py  authentication.py  consumers.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/motion_detector_backend/sensors/management/commands/: setup_device_token.py
backend/motion_detector_backend/sensors/migrations/: 0001_initial.py  0002_device_token.py
backend/motion_detector_backend/users/: adapters.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/motion_detector_backend/users/management/commands/: update_site_domain.py
backend/motion_detector_backend/users/migrations/: 0001_initial.py
backend/templates/: password_reset_complete.html  password_reset_confirm.html  verification_success.html
backend/templates/account/email/: email_confirmation_message.txt  email_confirmation_signup_message.txt  password_reset_key_subject.txt
esp32_motion_detector/: esp32_motion_detector.ino
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: motion_event.dart  user.dart
lib/pages/: dashboard_page.dart  profile_page.dart  register_page.dart  settings_page.dart  splash_screen.dart
lib/providers/: motion_event_provider.dart  sensor_data_provider.dart  user_provider.dart
lib/services/: api_service.dart  auth_service.dart  theme_service.dart  websocket_service.dart
lib/utils/: config.dart  logger.dart  navigation_helper.dart  theme.dart
lib/widgets/: app_drawer.dart  auth_button.dart  auth_text_field.dart  motion_event_list.dart  sensor_data_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+74 files in other folders)
