[tool.poetry]
name = "motion-detector-backend"
version = "0.1.0"
description = "Django REST Framework backend for the Motion Detector application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.6"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.1"
Pillow = "10.2.0"
python-decouple = "3.8"
dj-rest-auth = "5.0.2"
djangorestframework-simplejwt = "5.3.1"
django-allauth = "0.51.0"
psycopg2-binary = "2.9.9"
gunicorn = "21.2.0"
whitenoise = "6.6.0"
drf-yasg = "1.21.7"
channels = "4.0.0"
daphne = "4.0.0"
dj-database-url = "2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["backend"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportOptionalCall = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "trailing-whitespace",
    "bad-continuation",
    "len-as-condition",
    "fixme",
    "protected-access",
    "broad-except",
    "redefined-outer-name",
    "redefined-builtin",
    "bare-except",
    "unused-argument",
    "global-statement",
    "unused-wildcard-import",
    "wildcard-import",
    "dangerous-default-value",
    "arguments-differ",
    "attribute-defined-outside-init",
    "abstract-method",
    "unnecessary-pass",
    "no-self-use",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-branches",
    "duplicate-code",
    "no-member",
    "no-name-in-module",
    "import-error",
    "unsubscriptable-object",
    "unsupported-membership-test",
    "not-callable"
]

[tool.pylint.typecheck]
ignored-modules = ["django.urls.conf"]
